start all project

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 DB_ENGINE=django.db.backends.engine
-DB_NAME=skymarket
-DB_USER=skymarket
-DB_PASSWORD=skymarket
+DB_NAME=postgres
+DB_USER=postgres
+DB_PASSWORD=postgres
 DB_HOST=localhost
 DB_PORT=5432
 EMAIL_HOST=smtp.gmail.com
