--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_ENGINE=django.db.backends.engine
+DB_ENGINE=django.db.backends.postgresql
 DB_NAME=postgres
 DB_USER=postgres
-DB_PASSWORD=postgres
+DB_PASSWORD=password
 DB_HOST=localhost
 DB_PORT=5432
 EMAIL_HOST=smtp.gmail.com
